Bug 773903 - ~1s shutdown delay in xpcshell in xpcom shutdown. r=ted. This just updates mach_override.c to a version that has a faster search for an available spot to put the branch island.